got fade transition working, but introduced bug of cardlist not centering on mobile

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,5 +1,7 @@
 .App {
     text-align: center;
+    display: flex;
+    flex-direction: row;
 }
 
 .App-logo {
@@ -44,4 +46,12 @@
     to {
         transform: rotate(360deg);
     }
+}
+
+.switch-wrapper {
+    position: relative;
+}
+
+.switch-wrapper > div {
+    position: absolute;
 }
