--- a/src/Components/GameBoard/GameBoard.css
+++ b/src/Components/GameBoard/GameBoard.css
@@ -3,6 +3,18 @@
     flex-direction: row;
     justify-content: space-evenly;
     flex-grow: 1;
+    width: 100vw;
+}
+
+.gameAreaMobile {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.mobileContentWrapper {
+    display: inline-block;
 }
 
 .playerCardContainer {
