--- a/src/Components/Menu/Menu.css
+++ b/src/Components/Menu/Menu.css
@@ -1,3 +1,10 @@
 .logoContainer {
     padding-top: 2em;
+    width: 100vw;
+}
+
+.boardGrid {
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
